[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/LevelSummary.gd" type="Script" id=1]
[ext_resource path="res://HUD/dark_theme.tres" type="StyleBox" id=2]
[ext_resource path="res://Fonts/menu_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/interface_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sound Effects/select.wav" type="AudioStream" id=5]

[node name="LevelSummary" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 320.0
margin_bottom = 256.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 246.0

[node name="LevelCompleted" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Level completed!"

[node name="Score" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 300.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 4 )
text = "Your score: 9999"

[node name="Comment" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 300.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 4 )
text = "Comment score"

[node name="InsertNameContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 300.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 15
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/InsertNameContainer"]
margin_top = 15.0
margin_right = 300.0
margin_bottom = 145.0

[node name="TextEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/InsertNameContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 10.0
size_flags_vertical = 0
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
max_length = 20
context_menu_enabled = false
placeholder_text = "Insert your name here..."
caret_blink = true

[node name="SaveScoreButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/InsertNameContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 58.0
margin_bottom = 24.0
size_flags_horizontal = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "Save score!"

[node name="ClickSound" type="AudioStreamPlayer" parent="PanelContainer/MarginContainer/VBoxContainer/InsertNameContainer/VBoxContainer/SaveScoreButton"]
stream = ExtResource( 5 )

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 226.0
margin_right = 300.0
margin_bottom = 236.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Back to Main Menu"

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/InsertNameContainer/VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/InsertNameContainer/VBoxContainer/SaveScoreButton" to="." method="_on_SaveScoreButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
